--- a/views/main.html
+++ b/views/main.html
@@ -48,7 +48,9 @@
             
             <div class="twit-content">{{twit.content}}</div>
             {% if twit.img %}
-              <div class="twit-img"><img src="{{twit.img}}" alt="섬네일"></div>
+              <div class="twit-img">
+                <img src="{{twit.img}}" onerror="this.src = this.src.replace(/\/thumb\//, '/original/')" alt="섬네일">
+              </div>
             {% endif %}
           </div>
           <div>
@@ -78,7 +80,7 @@
         axios.post('/post/img', formData)
           .then((res) => {
             document.getElementById('img-url').value = res.data.url;
-            document.getElementById('img-preview').src = res.data.url;
+            document.getElementById('img-preview').src = res.data.originalUrl;
             document.getElementById('img-preview').style.display = 'inline';
           })
           .catch((err) => {
